--- a/styles/style.scss
+++ b/styles/style.scss
@@ -10,23 +10,34 @@
    ========================================================================== */
 
 /*
- * Main color
+ * primary brand color
  */
 
-$color-primary: #de4d43;
+$color-brand-primary: #de4d43;
 
 /*
- * lightned Main color <- wording? :X ...
- * Background color
+ * secondary brand color
  */
 
-$mainColorLightened: lighten($color-primary, 15%);
+$color-brand-secondary: #2366ab;
 
 /*
- * Opposite main color
+ * lightened primary brand color
  */
 
-$oppositeMainColor: invert($color-primary);
+$color-brand-primary-lightened: lighten($color-brand-primary, 15%);
+
+/*
+ * opposite/invert primary brand color
+ */
+
+$color-brand-primary-invert: invert($color-brand-primary);
+
+/*
+ * set background color
+ */
+
+$color-background: $color-brand-primary-lightened;
 
 /*
 
@@ -94,14 +105,6 @@ https://github.com/scottkellum/color-schemer
     border: 1px solid red;
 }
 
-/*
- * Main color background
- */
-
-.main-color-background {
-    background-color: #caffa0;
-}
-
 /* link icon */
 a[target=_blank]:before {
     font-family: 'ts1ce-icon-font';
@@ -118,8 +121,8 @@ a[target=_blank]:before {
    ========================================================================== */
 
 body {
-    color: $color-primary;
-    background-color: $mainColorLightened;
+    color: $color-brand-primary;
+    background-color: $color-background;
 }
 
 
@@ -141,14 +144,29 @@ body {
     height: 120px;
 }
 
+/*
+ * background color class
+ */
+.color-background {
+  background-color: $color-background;
+}
+
+/*
+ * primary brand color class
+ */
+.color-brand-primary {
+  background-color: $color-brand-primary;
+}
+
+
 /* ==========================================================================
    Sass color function results
    ========================================================================== */
 
 .sass-function-invert {
-    background-color: $oppositeMainColor;
+    background-color: $color-brand-primary-invert;
 }
 
 .sass-function-mix {
-    background-color: mix($color-primary, $oppositeMainColor, 66%);
+    background-color: mix($color-brand-primary, $color-brand-primary-invert, 66%);
 }
