Update gitignore to ignore DS_Store. Switch to uncompressed compiled css (better to debug). Use inuitcss beautons.
Signed-off-by: Paul Vincent Beigang <pbeigang@gmail.com>

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,3 +1,6 @@
+// set inuit settings, not sure if this is the right place, read more https://github.com/csswizardry/inuit.css#overriding-inuitcss-defaults
+$use-beautons: true;
+
 // import inuitcss
 @import "../inuitcss/style";
 
