Add transition Todo.

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -198,6 +198,7 @@ body {
 
 /* ==========================================================================
    Buttons, uses inuitcss class names
+   Todo: Add some nice css3 transitions for interaction
    ========================================================================== */
 
 .btn {
